--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="col-md-2">
                         <div class="logo text-center">
                             <a href="#">
-                                <img src="./images/logo_img.png" class="img-fluid" alt="Logo" />
+                                <img src="./images/logo_img.webp" class="img-fluid" alt="Logo" />
                             </a>
                         </div>
                     </div>
@@ -171,7 +171,7 @@
                     <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active position-relative">
-                                <img src="./images/banner_img_1.png" class="img-fluid d-block w-100" alt="...">
+                                <img src="./images/banner_img_1.webp" class="img-fluid d-block w-100" alt="...">
                                 <div class="content position-absolute">
                                     <span style="color: #b4976c;">LET’S BE SMARTER</span>
                                     <h2 class="mt-3 mb-4">Enjoy your daily <br> life Smart way...</h2>
@@ -188,7 +188,7 @@
                                 </div>
                             </div>
                             <div class="carousel-item position-relative">
-                                <img src="./images/banner_img_2.png" class="img-fluid d-block w-100" alt="...">
+                                <img src="./images/banner_img_2.webp" class="img-fluid d-block w-100" alt="...">
                                 <div class="content position-absolute">
                                     <span style="color: #b4976c;">DISCOUNT UPTO 75%, HURRY UP!</span>
                                     <h2 class="mt-3 mb-4">Next generation <br> Virtual reality</h2>
@@ -211,7 +211,7 @@
                 <div class="d-flex">
                     <div class="col-md-4">
                         <div class="card text-bg-dark border-0 rounded-0 overflow-hidden">
-                            <img src="./images/banner_img_3.png" class="card-img img-fluid rounded-0" alt="...">
+                            <img src="./images/banner_img_3.webp" class="card-img img-fluid rounded-0" alt="...">
                             <div class="card-img-overlay ms-4 mt-4">
                                 <p class="card-title mb-3" style="color: #b4976c;">NEW ARRIVAL</p>
                                 <h2 class="card-text mb-4" style="font-size: 28px;">Latest Qpad <br> with keyboard</h2>
@@ -221,7 +221,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card text-bg-dark border-0 rounded-0 overflow-hidden">
-                            <img src="./images/banner_img_4.png" class="card-img img-fluid rounded-0" alt="...">
+                            <img src="./images/banner_img_4.webp" class="card-img img-fluid rounded-0" alt="...">
                             <div class="card-img-overlay ms-4 mt-4">
                                 <p class="card-title mb-3" style="color: #b4976c;">GET UP TO 35% OFF</p>
                                 <h2 class="card-text mb-4" style="font-size: 28px;">And then their <br> was pro versions
@@ -232,7 +232,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card text-bg-dark border-0 rounded-0 overflow-hidden">
-                            <img src="./images/banner_img_5.png" class="card-img img-fluid rounded-0" alt="...">
+                            <img src="./images/banner_img_5.webp" class="card-img img-fluid rounded-0" alt="...">
                             <div class="card-img-overlay ms-4 mt-4">
                                 <p class="card-title mb-3" style="color: #b4976c;">HURRY UP!</p>
                                 <h2 class="card-text mb-4" style="font-size: 28px;">Modern & Style <br> Headphone</h2>
@@ -261,7 +261,7 @@
                         </div>
                         <div class="col">
                             <div class="item text-center">
-                                <img src="./images/item_img_1.png" class="img-fluid rounded-circle"
+                                <img src="./images/item_img_1.webp" class="img-fluid rounded-circle"
                                     style="width: 300px;" alt="">
                                 <h4 class="fs-5 fw-bold mt-3">Home Appliances</h4>
                                 <span>1 Items</span>
@@ -269,7 +269,7 @@
                         </div>
                         <div class="col">
                             <div class="item text-center">
-                                <img src="./images/item_img_2.png" class="img-fluid rounded-circle"
+                                <img src="./images/item_img_2.webp" class="img-fluid rounded-circle"
                                     style="width: 300px;" alt="">
                                 <h4 class="fs-5 fw-bold mt-3">PC & Laptop</h4>
                                 <span>6 Items</span>
@@ -277,7 +277,7 @@
                         </div>
                         <div class="col">
                             <div class="item text-center">
-                                <img src="./images/item_img_3.png" class="img-fluid rounded-circle"
+                                <img src="./images/item_img_3.webp" class="img-fluid rounded-circle"
                                     style="width: 300px;" alt="">
                                 <h4 class="fs-5 fw-bold mt-3">Kitchen Appliances</h4>
                                 <span>10 Items</span>
@@ -285,7 +285,7 @@
                         </div>
                         <div class="col">
                             <div class="item text-center">
-                                <img src="./images/item_img_4.png" class="img-fluid rounded-circle"
+                                <img src="./images/item_img_4.webp" class="img-fluid rounded-circle"
                                     style="width: 300px;" alt="">
                                 <h4 class="fs-5 fw-bold mt-3">Phone & Tablet</h4>
                                 <span>11 Items</span>
@@ -293,7 +293,7 @@
                         </div>
                         <div class="col">
                             <div class="item text-center">
-                                <img src="./images/item_img_5.png" class="img-fluid rounded-circle"
+                                <img src="./images/item_img_5.webp" class="img-fluid rounded-circle"
                                     style="width: 300px;" alt="">
                                 <h4 class="fs-5 fw-bold mt-3">Accessories</h4>
                                 <span>6 Items</span>
@@ -322,12 +322,104 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3">
-                            <div class="card border border-light" style="width: 18rem;">
-                                <img src="./images/product_img_1.png" class="card-img-top img-fluid" alt="...">
-                                <div class="card-body">
-                                    <p class="card-text fw-medium mb-0">Smart Phone 12</p>
-                                    <span>From Rs. 2,800.00</span>
+                        <div class="d-flex">
+                            <div class="col-md-3">
+                                <div class="card border border-light" style="width: 18rem;">
+                                    <img src="./images/product_img_1.webp" class="card-img-top img-fluid" alt="...">
+                                    <div class="card-body">
+                                        <p class="card-text fs-5 fw-bold mb-0">Smart Phone 12</p>
+                                        <span class="text-muted fw-medium">From Rs. 2,800.00</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="card border border-light" style="width: 18rem;">
+                                    <div class="img position-relative">
+                                        <span class="position-absolute bg-white m-2 px-2 rounded">SALE</span>
+                                        <img src="./images/product_img_2.webp" class="card-img-top img-fluid" alt="...">
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="card-text fs-5 fw-bold mb-0">Maxoni Microwave Oven</p>
+                                        <span class="text-muted fw-medium me-2">Rs. 104,800.00</span>
+                                        <span class="text-black-50 text-decoration-line-through fw-medium">Rs.
+                                            122,300.00 </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="card border border-light" style="width: 18rem;">
+                                    <img src="./images/product_img_3.webp" class="card-img-top img-fluid" alt="...">
+                                    <div class="card-body">
+                                        <p class="card-text fs-5 fw-bold mb-0">Ornex Blender</p>
+                                        <span class="text-muted fw-medium">Rs. 104,800.00</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="card border border-light" style="width: 18rem;">
+                                    <img src="./images/product_img_4.webp" class="card-img-top img-fluid" alt="...">
+                                    <div class="card-body">
+                                        <p class="card-text fs-5 fw-bold mb-0">LF 7 pro</p>
+                                        <span class="text-muted fw-medium">Rs. 39,300.00</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="d-flex mt-5">
+                            <div class="col-md-3">
+                                <div class="card border border-light" style="width: 18rem;">
+                                    <div class="img">
+                                        <span class="position-absolute bg-white m-2 px-2 rounded">SALE</span>
+                                        <img src="./images/product_img_5.webp" class="card-img-top img-fluid" alt="...">
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="card-text fs-5 fw-bold mb-0">Xonic CC Camera</p>
+                                        <span class="text-muted fw-medium me-2">Rs. 9,700.00</span>
+                                        <span class="text-black-50 text-decoration-line-through fw-medium">Rs.
+                                            20,600.00</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="card border border-light" style="width: 18rem;">
+                                    <div class="img">
+                                        <span class="position-absolute bg-white m-2 px-2 rounded">SALE</span>
+                                        <img src="./images/product_img_6.webp" class="card-img-top img-fluid" alt="...">
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="card-text fs-5 fw-bold mb-0">Mango Router</p>
+                                        <span class="text-muted fw-medium me-2">Rs. 20,100.00</span>
+                                        <span class="text-black-50 text-decoration-line-through fw-medium">Rs.
+                                            48,100.00</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="card border border-light" style="width: 18rem;">
+                                    <div class="img">
+                                        <span class="position-absolute bg-white m-2 px-2 rounded">SALE</span>
+                                        <img src="./images/product_img_7.webp" class="card-img-top img-fluid" alt="...">
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="card-text fs-5 fw-bold mb-0">Olex Water purifier</p>
+                                        <span class="text-muted fw-medium me-2">Rs. 28,000.00</span>
+                                        <span class="text-black-50 text-decoration-line-through fw-medium">Rs.
+                                            56,800.00</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="card border border-light" style="width: 18rem;">
+                                    <div class="img">
+                                        <span class="position-absolute bg-white m-2 px-2 rounded">SALE</span>
+                                        <img src="./images/product_img_8.webp" class="card-img-top img-fluid" alt="...">
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="card-text fs-5 fw-bold mb-0">Mackbook pro(15inch)</p>
+                                        <span class="text-muted fw-medium me-2">Rs. 65,600.00</span>
+                                        <span class="text-black-50 text-decoration-line-through fw-medium">Rs.
+                                            87,400.00</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -337,6 +429,48 @@
         </section>
 
         <!-- product section end -->
+
+        <!-- offer section start -->
+
+        <section>
+            <div class="offer py-4">
+                <div class="d-flex">
+                    <div class="col-md-4">
+                        <div class="card text-bg-dark border-0 rounded-0 overflow-hidden">
+                            <img src="./images/offer_img_1.webp" class="card-img img-fluid rounded-0" alt="...">
+                            <div class="card-img-overlay text-center mt-4" style="left: 30%;">
+                                <p class="card-title mb-2" style="color: #b4976c;">VR FEST</p>
+                                <h2 class="card-text mb-2" style="font-size: 40px;">Virtual <br> Reality Experience</h2>
+                                <a href="#" class="text-white fw-bold" role="button">Buy Now</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card text-bg-dark border-0 rounded-0 overflow-hidden">
+                            <img src="./images/offer_img_2.webp" class="card-img img-fluid rounded-0" alt="...">
+                            <div class="card-img-overlay ms-4 mt-4" style="left: 30%;">
+                                <p class="card-title mb-2" style="color: #b4976c;">NEW ARRIVAL</p>
+                                <h2 class="card-text mb-2" style="font-size: 40px;">Make your life Easier & Stylish</h2>
+                                <a href="#" class="text-white fw-bold" role="button">Buy Now</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card text-bg-dark border-0 rounded-0 overflow-hidden">
+                            <img src="./images/offer_img_3.webp" class="card-img img-fluid rounded-0" alt="...">
+                            <div class="card-img-overlay ms-4 mt-4">
+                                <p class="card-title mb-2" style="color: #b4976c;">BLACK FRIDAY OFFER</p>
+                                <h2 class="card-text mb-2" style="font-size: 40px;">Get your <br> Qpad as early as <br>
+                                    you can...</h2>
+                                <a href="#" class="text-white fw-bold" role="button">Buy Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- offer section end -->
 
     </main>
 
